--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--    <link rel="stylesheet" href="style.css">-->
+    <title>Kilitrip!</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="mainbit">
