--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="mainbit">
-    <h1>haiii!</h1>
-    <p>My first paragraph.</p>
-</div>
-
+    <div class="mainbit">
+        <img>
+        <div class="blurelem">
+            <div>
+                <h1>haiii!</h1>
+                <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!</h4>
+                <a href="https://copyparty.kilitrip.org/">Copyparty (file server!)</a>    
+            </div>
+        </div>
+    </div>
 </body>
 </html> 
