--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Kilitrip!</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.1">
 </head>
 <body>
     <div class="mainbit">
