--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <div class="sillybio">
                 <h1>haiii!</h1>
                 <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!</h4>
-                <a href="https://www.youtube.com/watch?v=sqK-jh4TDXo">
-                    <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
-                </a>
-                
+                <div>
+                    <a href="https://www.youtube.com/watch?v=sqK-jh4TDXo">
+                        <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
+                    </a>
+                </div>
             </div>
             
             <div class="socials">
