--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
             <div class="sillybio">
                 <h1>haiii!</h1>
                 <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!</h4>
-                <div>
+                <div class="blinkies">
+                    <img class="adhdblinkie" src="\blinkies\adhd.gif" alt="adhdblinkie" width=128>
                     <a href="https://www.youtube.com/watch?v=sqK-jh4TDXo">
                         <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
                     </a>
+                    <img class="meandwhoblinkie" src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=128>
                 </div>
             </div>
             
