--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
                 <h1>haiii!</h1>
                 <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!</h4>
                 <div class="blinkies">
-                    <img class="adhdblinkie" src="\blinkies\adhd.gif" alt="adhdblinkie" width=128>
+                    <div class="blinkies1">
+                        <img src="\blinkies\adhd.gif" alt="adhd" width=128><br>
+                        <img src="\blinkies\underconstruction.gif" alt="underconstruction" width=128><br>
+                        <img src="\blinkies\splattin.gif" alt="splattin" width=128><br>
+                        <img src="\blinkies\archbtw.gif" alt="archbtw" width=128>
+                    </div>
                     <a href="https://www.youtube.com/watch?v=sqK-jh4TDXo">
                         <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
                     </a>
-                    <img class="meandwhoblinkie" src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=128>
+                    <div class="blinkies2">
+                        <img src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=128><br>
+                        <img src="\blinkies\sudopacman.gif" alt="sudopacman" width=128><br>
+                        <img src="\blinkies\tetoblink.gif" alt="tetoblink" width=128><br>
+                        <img src="\blinkies\gender.gif" alt="gender" width=128>
+                    </div>
                 </div>
             </div>
             
