--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!</h4>
                 <div class="blinkies">
                     <div class="blinkies1">
-                        <img src="\blinkies\adhd.gif" alt="adhd" width=200><br>
+                        <br><img src="\blinkies\adhd.gif" alt="adhd" width=200><br>
                         <img src="\blinkies\underconstruction.gif" alt="underconstruction" width=200><br>
                         <img src="\blinkies\splattin.gif" alt="splattin" width=200><br>
                         <img src="\blinkies\archbtw.gif" alt="archbtw" width=200>
@@ -23,7 +23,7 @@
                         <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
                     </a>
                     <div class="blinkies2">
-                        <img src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=200><br>
+                        <br><img src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=200><br>
                         <img src="\blinkies\sudopacman.gif" alt="sudopacman" width=200><br>
                         <img src="\blinkies\tetoblink.gif" alt="tetoblink" width=200><br>
                         <img src="\blinkies\gender.gif" alt="gender" width=200>
