--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Kilitrip!</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="style.css?v=1.3">
+    <link rel="stylesheet" href="style.css?v=1.4">
 </head>
 <body>
         
@@ -11,22 +11,23 @@
         <div>
             <div class="sillybio">
                 <h1>haiii!</h1>
-                <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!</h4>
+                <h4>soooo uhhh, my name is kilitrip, Izzy, Ollie, whatever you wanna call me!<br>this site is a work in progress at the moment but its coming along!<br><br>i plan on adding a blogging system and a couple fun stuff to this site :3, so stay tuned!</h4>
                 <div class="blinkies">
                     <div class="blinkies1">
-                        <br><img src="\blinkies\adhd.gif" alt="adhd" width=200><br>
-                        <img src="\blinkies\underconstruction.gif" alt="underconstruction" width=200><br>
-                        <img src="\blinkies\splattin.gif" alt="splattin" width=200><br>
-                        <img src="\blinkies\archbtw.gif" alt="archbtw" width=200>
+                        <br><img src="blinkies\adhd.gif" alt="adhd" width=200><br>
+                        <img src="blinkies\underconstruction.gif" alt="underconstruction" width=200><br>
+                        <img src="blinkies\splattin.gif" alt="splattin" width=200><br>
+                        <img src="blinkies\archbtw.gif" alt="archbtw" width=200>
                     </div>
-                    <a href="https://www.youtube.com/watch?v=sqK-jh4TDXo">
+                    <a href="https://www.youtube.com/watch?v=0iVlSNpq8i8">
                         <img class="teto" src="tetonendroid.png" alt="teto nendoroid" width=128>
+                        <h6 style="margin: auto;">click teto for a teto song!</h6>
                     </a>
                     <div class="blinkies2">
-                        <br><img src="\blinkies\meandwho.gif" alt="meandwhoblinkie" width=200><br>
-                        <img src="\blinkies\sudopacman.gif" alt="sudopacman" width=200><br>
-                        <img src="\blinkies\tetoblink.gif" alt="tetoblink" width=200><br>
-                        <img src="\blinkies\gender.gif" alt="gender" width=200>
+                        <br><img src="blinkies\meandwho.gif" alt="meandwhoblinkie" width=200><br>
+                        <img src="blinkies\sudopacman.gif" alt="sudopacman" width=200><br>
+                        <img src="blinkies\tetoblink.gif" alt="tetoblink" width=200><br>
+                        <img src="blinkies\gender.gif" alt="gender" width=200>
                     </div>
                 </div>
             </div>
